feat: add requirements and diagram

--- a/templates/index.html
+++ b/templates/index.html
@@ -262,7 +262,7 @@
         </div>
         <div class="left-column">
             <h4 align="left"><b>Block representation of the model:</b></h4>
-            <p align="center"><img src="static/chatbotdrawio.png" alt="schema" width = 100%></p>
+            <p align="center"><img src="static/diagram.jpg" alt="schema" width = 100%></p>
             <h4 align="left"><b>Check out my <a href="https://github.com/tmonreal" target="_blank">GitHub page</a> for the complete code and step-by-step instructions.</b></h4>
             <h4 align="left"><b>Contact me through <a href="https://www.linkedin.com/in/trinidad-monreal/" target="_blank">my Linkedin profile</a></b></h4>
         </div>
